  powerful steed. Due to being raised by dragons, they are averse to wearing
  dragon scales and dragon scale mail, which makes their midgame very difficult.
  Their quest artifact is Sharur, a talking ornate mace.

New Artifacts
- Gungnir
- Gleipnir
- Gae Bulg
- Gae Dearg
- Gae Buidhe
- Carnwennan
- Seafoam
- Luckless Folly
- Dismounter
- Final Death
- Unlimited Moon
- Black Arrow
- Vladsbane (joke artifact, must be wished for)
- The King in Yellow
- Sharur
- The Holographic Void Lily

Dungeon Generation
- Statuary level: A level with many statues and statue traps. One statue
  contains a wand of wonder.
- The Void: A dangerous one level branch with a very large amount of loot, but
  filled with a number of extremely annoying void-themed monsters and a single
  void dragon.
- Beast den: A special room which contains a number of wild animals.
- Archery Shops: Sell arrows and bows.
- Junk Shops: Function as a general store, but a large selection of what they
  sell is useless.
- Underground Rivers: Paxed's underground rivers patch has been implemented.

New Monster Spells
- Sonic Scream
- Gas Cloud
- Slime Spray

New Items
- Bone Knife
- Throwing Axe
- Razor Whip
- Earmuff (pluralization to "Earmuffs" is currently WIP)
- Flowing Dress
- Snappy Tuxedo
- Iron Mantle
- Cloak of Flight
- Tower Shield
- Hide Shield
- Rogues Gloves
- Boxing Gloves
- Amulet of Drain Resistance
- Amulet of Nausea
- Amulet of Danger
- Mask
- Playing card deck
- Deck of fate
- Pinch of Catnip
- Potion of Reflection
- Scroll of Cloning
- Scroll of Pure Law
- Scroll of True Neutrality
- Scroll of Raw Chaos
- Wand of Wonder
- Wand of Acid
- Wand of Poison Gas
- Bony Quill
- Ooze Dragon Scale Mail
- Razor Dragon Scale Mail
- Filth Dragon Scale Mail
- Hex Dragon Scale Mail
- Void Dragon Scales
- Ooze Dragon Scales
- Razor Dragon Scales
- Filth Dragon Scales
- Hex Dragon Scales
- Void Dragon Scales

New Monsters
- Giant Fly
- Earthshark
- Will-O'-The-Wisp
- Monstrous spider
- Memory Hound