@@ -372,3 +372,4 @@ Sometimes earmuffs can save you from things you would rather not hear.
 Cats love catnip.
 Invoking non-quest artifacts: Now at a dungeon near you!
 Lawful beings feel anything but neutral about reading chaotic scrolls.
+If you are fighting a praying mantis, don't have faith in Elbereth.
