@@ -2,7 +2,7 @@
 /* Copyright (c) Izchak Miller, Mike Stephenson, Steve Linhart, 1989. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 2/01/18 by NullCGT */
+/* Edited on 4/6/18 by NullCGT */
 
 #include "hack.h"
 
@@ -363,8 +363,6 @@ register struct obj *gold;
             if (rn2(3)) {
                 if (mtmp->data == &mons[PM_SOLDIER])
                     goldreqd = 100L;
-                else if (mtmp->data == &mons[PM_RENEGADE_SHOPKEEPER])
-                    goldreqd = 250L;
                 else if (mtmp->data == &mons[PM_SERGEANT])
                     goldreqd = 250L;
                 else if (mtmp->data == &mons[PM_LIEUTENANT])
