@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/5/18 by NullCGT */
+/* Edited on 4/6/18 by NullCGT */
 
 #include "hack.h"
 #include "artifact.h"
@@ -2078,6 +2078,9 @@ boolean ufound;
         case AD_ELEC:
             physical_damage = FALSE;
             not_affected |= Shock_resistance;
+        case AD_ACID:
+            physical_damage = FALSE;
+            not_affected |= Acid_resistance;
         common:
 
             if (!not_affected) {
