@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 3/29/18 by NullCGT */
+/* Edited on 4/6/18 by NullCGT */
 
 #include "hack.h"
 
@@ -2028,6 +2028,8 @@ register struct attack *mattk;
         goto common;
     case AD_ELEC:
         resistance = resists_elec(mdef);
+    case AD_ACID:
+        resistance = resists_acid(mdef);
     common:
         if (!resistance) {
             pline("%s gets blasted!", Monnam(mdef));
