@@ -119,7 +119,6 @@ New Artifacts
 - Dismounter
 - Final Death
 - Unlimited Moon
-- Black Arrow
 - Vladsbane (joke artifact, must be wished for)
 - The King in Yellow
 - Sharur
@@ -208,7 +207,6 @@ New Monsters
 - Lemur
 - Zombie Dragon
 - Animated Statue
-- Renegade Shopkeeper
 - Desert Jinn
 - Marid
 - Merfolk
@@ -216,9 +214,17 @@ New Monsters
 - Velociraptor
 - T-Rex
 - Banshee
+- Corrosive Sphere
+- Barghest
+- Giant Praying Mantis
 - Elder Kraken
 - Amalgamation
 - Bad Clone
+- Draugr
+- Amphisbaena
+- Sludge Golem
+- Cow
+- Phoenix
 - Cartomancer (Player Monster)
 - Dragonmaster (Player Monster)
 - Drake (Dragonmaster Quest)
